--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 style="text-align: center; color: skyblue">Notas</h1>
+    <h1 style="text-align: center; color: skyblue; font-size: 6rem;">Notas</h1>
     
     <div class="content-notes">
        
